[package]
name = "cliptools"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.11.3"
open = "5.3.5"
webbrowser = "1.2.1"
wl-clipboard-rs = "0.9.3"
xdg-utils = "0.4.0"
reqwest = {version = "0.13.0", features = ["blocking"]}
regex = "1.12.4"
phf = {version = "0.14.0", features = ["macros", "ptrhash"]}
phf_macros = "0.14.0"
